temp save with searchbar stretch bug

--- a/main.css
+++ b/main.css
@@ -2,9 +2,23 @@
 GENERAL SETUP
 ******************************/
 
-* {margin: 0; padding:0; box-sizing:border-box; font-family:"Poppins",sans-serif;}
-a {color: var(--primary-color);}
-a:hover {cursor: pointer;}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+a {
+    color: var(--primary-color);
+}
+a:hover {
+    cursor: pointer;
+}
+/* hide scroll bar, but still scrollable */
+::-webkit-scrollbar {
+    display: none;
+    overflow-y: scroll;
+}
 
 /* color variables */
 :root {
@@ -13,7 +27,6 @@ a:hover {cursor: pointer;}
     --primary-white: rgba(232, 234, 237);
     --primary-dark-gray: rgb(107, 114, 128);
     --primary-light-gray: rgb(229, 231, 235);
-    
 }
 
 /******************************
@@ -22,8 +35,8 @@ CONTAINER AND HEADER
 
 /* responsive container */
 .container {
-    margin: 2rem auto; /* room on top and centered horizontally */
-    max-width: 768px; /* no bigger than an ipad */;
+    margin: 2rem auto;
+    max-width: 768px;
 }
 
 /* style header in a div */
@@ -40,7 +53,7 @@ h3 .highlight {
 }
 
 /******************************
-TITLE ROW
+TITLE AND FLEX ROWS
 ******************************/
 
 .title-row {
@@ -51,10 +64,6 @@ TITLE ROW
     padding: 0.75rem 1.25rem;
     color: var(--primary-dark-gray);
 }
-
-/******************************
-FLEX ROWS
-******************************/
 
 .flex-row {
     margin: 1.25em;
@@ -76,8 +85,9 @@ FLEX ROWS
     line-height: 1.3rem;
 }
 
+/* span wraps text by default */
 .flex-row span {
-    white-space: nowrap; /* span wraps text by default */
+    white-space: nowrap;
     color: var(--primary-color);
     font-size: 1.4rem;
     font-weight: 700;
@@ -93,53 +103,114 @@ hr {
     height: 1px;
 }
 
-/******************************
+/*****************************************
 GOOGLE SEARCH BAR
-******************************/
+*****************************************/
 
+/* div to hold our google search bar */
 .inputWrapper {
-    background-color: var(--primary-dark-gray);
-    border-radius: 40px;
-    margin: 3rem auto;
-    width: 320px;
-    height: 45px;
-    /* flex rows, vertical center */
+    width: 70%;
+    height: 50px;
+    margin: 2rem auto;
+
     display: flex;
     align-items: center;
-    flex: row;
-    flex-grow: 1 5;
-
+    border-radius: 50px;
+    background-color: var(--primary-dark-gray);
+    border: solid red 3px;
 }
 
-/* style direct child of "google-search" div */
+/* left side favicon */
+i {
+    padding: 0 1.6rem;
+    color: var(--primary-light-gray);
+}
+
+/********** form and button **********/
+
+/* grow form width to far right  */
+.inputWrapper .formContainer {
+    flex-grow: 1;
+}
+
+/* remove form defaults */
+.inputWrapper form {
+    outline: none;
+    appearance: none;
+    box-shadow: none;
+    border: none;
+}
+
+/* style the form */
+.inputWrapper form {
+    display: flex;
+    height: 50px;
+    border-radius: 50px;
+    /* background-color: var(--primary-dark-gray); */
+    background-color: chocolate;
+}
+
+/* input should fill center */
 .inputWrapper input {
     width: 100%;
-    height: 45px;
-    background-color: var(--primary-dark-gray);
+    height: 100%;
+    outline: none;
     border: none;
-    padding-left: 5px;
-    /* remove default input styling */
-    appearance: none;
-    outline: none !important;
-    box-shadow: none;
+
+    color: var(--primary-white);
+    background-color: var(--primary-dark-gray);
+    background-color: green;
 }
 
-input:focus {
-    outline:none;
-    border:none;
-    color: white;
+button {
+    background-color: var(--primary-dark-gray);
+    border-radius: 50px;
+    padding: none;
+    margin: none;
+    text-decoration: none;
+    text-align: center;
+}
+
+input,
+button,
+submit {
+    border: none;
+}
+
+.inputWrapper form button i {
+    padding: 0 1.6rem;
+    color: var(--primary-light-gray);
+}
+
+/* .inputWrapper form span {
+    display: block;
+}
+
+.inputWrapper form button {
+    float: right;
+} */
+/* <button style="display: inline-block;height: 50px; border-radius: 50px; box-shadow: none; cursor:pointer; border: none; "><i class="fab fa-google"></i></button> */
+
+/* .inputWrapper span {
+    background-color: var(--primary-dark-gray)
+} */
+
+/* .inputWrapper input:focus {
+    outline: none;
+    border: none;
+    color: var(--primary-white);
 }
 
 .inputWrapper input::placeholder {
-    color: var(--primary-light-gray);
+    font-size: 14px;
     font-weight: 300;
-    /* font-size: 1rem; */
+    padding-left: 5px;
+    vertical-align: center;
+    color: var(--primary-white);
+    background-color: var(--primary-dark-gray);
 }
 
-i {
-    padding: 0 1rem;
-    color: var(--primary-white);
-}
+ */
 
 /******************************
 MEDIA QUERIES
@@ -147,7 +218,6 @@ MEDIA QUERIES
 
 /* move time below text on small devices */
 @media only screen and (max-width: 600px) {
-    
     .flex-row {
         flex-wrap: wrap; /* (span) item that doesn't fit gets wrapped to next row */
     }
